--- a/assets/css/webflow.css
+++ b/assets/css/webflow.css
@@ -42,7 +42,18 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-
+html {
+  height: 100%;
+}
+body {
+  margin: 0;
+  min-height: 100%;
+  background-color: #fff;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  color: #333;
+}
 img {
   max-width: 100%;
   vertical-align: middle;
@@ -89,6 +100,9 @@ input.w-button {
 }
 html[data-w-dynpage] [data-w-cloak] {
   color: transparent !important;
+}
+.w-code-block {
+  margin: unset;
 }
 .w-webflow-badge,
 .w-webflow-badge * {
