fix(links): correct hover color on links

--- a/css/resonite-website-a2201f.webflow.css
+++ b/css/resonite-website-a2201f.webflow.css
@@ -584,9 +584,10 @@ a {
   text-decoration: none;
 }
 
+/*
 .nav-link:hover {
   color: rgba(26, 27, 31, .75);
-}
+}*/
 
 .nav-link:focus-visible {
   outline-offset: 0px;
