for real update the hover color now

--- a/css/resonite-website-a2201f.webflow.css
+++ b/css/resonite-website-a2201f.webflow.css
@@ -584,10 +584,12 @@ a {
   text-decoration: none;
 }
 
-/*
+/**
+Disabled for now
 .nav-link:hover {
   color: rgba(26, 27, 31, .75);
-}*/
+}
+*/
 
 .nav-link:focus-visible {
   outline-offset: 0px;
