--- a/css/resonite-website-a2201f.webflow.css
+++ b/css/resonite-website-a2201f.webflow.css
@@ -96,6 +96,22 @@
   display: block;
 }
 
+.w-embed-youtubevideo {
+  width: 100%;
+  background-image: url('https://d3e54v103j8qbb.cloudfront.net/static/youtube-placeholder.2b05e7d68d.svg');
+  background-position: 50%;
+  background-size: cover;
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
+  position: relative;
+}
+
+.w-embed-youtubevideo:empty {
+  min-height: 75px;
+  padding-bottom: 56.25%;
+}
+
 @media screen and (max-width: 991px) {
   .w-layout-blockcontainer {
     max-width: 728px;
@@ -603,6 +619,7 @@ a {
   max-width: 46%;
   flex-direction: column;
   justify-content: flex-start;
+  align-self: flex-start;
   align-items: flex-start;
   display: flex;
 }
@@ -610,12 +627,15 @@ a {
 .margin-bottom-24px {
   color: #2b2f35;
   text-shadow: 4px 4px 3px rgba(17, 21, 29, .08);
-  margin-bottom: 24px;
+  margin-bottom: 0;
 }
 
 .shadow-two {
   aspect-ratio: 560 / 392;
   object-fit: cover;
+  background-image: url('../images/Hero-Luci-and-Ursula-on-the-Blackhawk.png');
+  background-position: 50% 0;
+  background-size: cover;
   border-radius: 15.46px;
   box-shadow: 4px 4px 3px rgba(17, 21, 29, .08);
 }
@@ -1068,7 +1088,7 @@ a {
 .margin-bottom-24px-copy {
   color: #2b2f35;
   text-shadow: 4px 4px 3px rgba(17, 21, 29, .08);
-  margin-bottom: 24px;
+  margin-bottom: 0;
 }
 
 .hero-heading-right-2-copy {
@@ -1076,6 +1096,10 @@ a {
   border-bottom: 1px solid #e4ebf3;
   padding: 80px 30px;
   position: relative;
+}
+
+.hero-heading-right-2-copy:hover {
+  color: #2b2f35;
 }
 
 .paragraph-2 {
@@ -1333,6 +1357,7 @@ a {
   z-index: 2;
   background-color: #2b2f35;
   border-bottom: 1px solid #e4ebf3;
+  margin-top: -1px;
   margin-left: -5px;
   margin-right: -5px;
   padding: 50px 30px 15px;
@@ -1496,6 +1521,8 @@ a {
 .image-3 {
   background-image: linear-gradient(#2b2f35, #2b2f35);
   border-radius: 15.46px;
+  align-self: auto;
+  margin-top: 65px;
   padding: 15.46px;
 }
 
@@ -1586,24 +1613,26 @@ a {
   color: #fff;
   letter-spacing: 2px;
   text-transform: none;
-  background-color: #492f64;
+  background-color: #458fab;
   border-radius: 9.6px;
-  margin-top: 0;
+  margin-top: 15.46px;
   margin-bottom: 15.46px;
   padding: 12px 25px;
   font-size: 15px;
   font-weight: 500;
   line-height: 20px;
   transition: all .2s;
+  box-shadow: 4px 4px 3px rgba(17, 21, 29, .08);
 }
 
 .button-primary:hover {
-  color: #fff;
-  background-color: #824aab;
+  color: #86888b;
+  background-color: #61d1fa;
 }
 
 .button-primary:active {
-  background-color: #241e35;
+  color: #2b2f35;
+  background-color: #61d1fa;
 }
 
 .hero-image {
@@ -1615,6 +1644,7 @@ a {
   width: 50%;
   aspect-ratio: 1 / 1;
   box-shadow: none;
+  background-image: none;
   align-self: center;
   margin-top: 15.46px;
   margin-bottom: 15.46px;
@@ -1910,8 +1940,11 @@ a {
 
 .hero-heading-center {
   background-color: #11151d;
+  background-image: linear-gradient(rgba(17, 21, 29, .8) 56%, rgba(169, 119, 65, .8) 91%, rgba(230, 158, 80, .8)), url('../images/The-Blackhawk.png');
+  background-position: 0 0, 0 0;
+  background-size: auto, cover;
   border-bottom: 1px solid #e4ebf3;
-  padding: 80px 30px;
+  padding: 25px 30px 80px;
   position: relative;
 }
 
@@ -1942,6 +1975,7 @@ a {
 
 .margin-bottom-24px-3 {
   color: #e1e1e0;
+  text-shadow: 4px 4px 3px rgba(17, 21, 29, .8);
   margin-bottom: 24px;
   padding-top: 15.46px;
 }
@@ -1971,6 +2005,8 @@ a {
   height: auto;
   aspect-ratio: 1000 / 1500;
   object-fit: cover;
+  border-radius: 15.46px;
+  box-shadow: 4px 4px 3px rgba(17, 21, 29, .8);
 }
 
 .text-block-17-copy {
@@ -1986,6 +2022,8 @@ a {
 .centered-heading-copy {
   color: #e1e1e0;
   text-align: left;
+  text-shadow: 4px 4px 3px rgba(17, 21, 29, .8);
+  margin-top: 45px;
   margin-bottom: 0;
   font-weight: 600;
 }
@@ -2012,6 +2050,345 @@ a {
 
 .button-primary-copy:active {
   background-color: #241e35;
+}
+
+.fn-banner-image-three {
+  width: 246px;
+  height: 246px;
+  object-fit: contain;
+  position: absolute;
+  top: auto;
+  bottom: -61px;
+  left: auto;
+  right: -55px;
+}
+
+.fn-banner-image-two {
+  width: 172px;
+  height: 172px;
+  object-fit: contain;
+  position: absolute;
+  top: -67px;
+  bottom: auto;
+  left: auto;
+  right: 186px;
+}
+
+.fn-banner-image-one {
+  width: 287px;
+  height: 287px;
+  object-fit: contain;
+  position: absolute;
+  top: auto;
+  bottom: -62px;
+  left: -44px;
+  right: auto;
+}
+
+.fn-button-dark {
+  color: #df0;
+  background-color: #1d1f1e;
+  border: 1px solid #000;
+  border-radius: 8px;
+  padding: 12px 24px;
+  font-family: Open Sans, sans-serif;
+  font-size: 16px;
+  line-height: 1.6em;
+  transition: color .25s, background-color .25s;
+}
+
+.fn-button-dark:hover {
+  color: #0f1213;
+  background-color: #df0;
+  border-color: #0f1213;
+}
+
+.fn-button-dark.w--current {
+  background-color: #1d1f1e;
+}
+
+.fn-button-dark.w--current:hover {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.fn-paragraph-dark {
+  color: #1d1f1e;
+  margin-bottom: 32px;
+  font-family: Open Sans, sans-serif;
+  font-size: 16px;
+  line-height: 1.6em;
+}
+
+.fn-heading-2 {
+  margin-top: 0;
+  margin-bottom: 24px;
+  font-family: Open Sans, sans-serif;
+  font-size: 52px;
+  line-height: 1.2em;
+}
+
+.fn-cta-banner-column {
+  max-width: 532px;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+}
+
+.fn-cta-banner {
+  width: 100%;
+  color: #1d1f1e;
+  text-align: center;
+  background-color: #df0;
+  border-radius: 24px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  display: flex;
+  position: relative;
+}
+
+.fn-container {
+  width: 100%;
+  max-width: 1310px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.fn-section {
+  width: 100%;
+  color: #ecf0ef;
+  background-color: #1d1f1e;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  font-family: Open Sans, sans-serif;
+  display: flex;
+}
+
+.fn-section.overflow-none {
+  overflow: hidden;
+}
+
+.section {
+  background-color: #e69e50;
+  background-image: linear-gradient(rgba(230, 158, 80, .6), rgba(230, 158, 80, .6)), url('../images/Branching-Storylines.png');
+  background-position: 0 0, 50%;
+  background-size: auto, 140% 140%;
+  margin-top: -1px;
+  padding-top: 40.44px;
+  padding-bottom: 65.44px;
+  position: relative;
+}
+
+.youtube {
+  width: auto;
+  object-fit: fill;
+  border-radius: 15.46px;
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
+  top: auto;
+  bottom: auto;
+  left: auto;
+  right: auto;
+}
+
+.flex-block-24 {
+  flex-direction: column;
+  padding: 65.44px 418.9px;
+}
+
+.youtube-2 {
+  border-radius: 15.46px;
+  margin-top: 25px;
+}
+
+.centered-heading-copy-copy {
+  color: #2b2f35;
+  text-align: left;
+  text-shadow: 4px 4px 3px rgba(17, 21, 29, .08);
+  margin-bottom: 0;
+  font-weight: 600;
+}
+
+.gallery-slider {
+  background-color: #11151d;
+  border-bottom: 1px solid #e4ebf3;
+  padding: 25px 30px;
+  position: relative;
+}
+
+.container-14 {
+  width: 100%;
+  max-width: 1236px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gallery-wrapper {
+  grid-column-gap: 40px;
+  grid-row-gap: 40px;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-columns: 1fr;
+  align-items: start;
+  display: grid;
+}
+
+.gallery-block {
+  height: 100%;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-right: 45px;
+  display: flex;
+}
+
+.gallery-slide {
+  height: auto;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.gallery-slide-wrapper {
+  max-width: 47%;
+  margin-right: 6%;
+}
+
+.gallery-slide-image {
+  position: relative;
+}
+
+.gallery-image {
+  width: 100%;
+  border-radius: 15.46px;
+}
+
+.gallery-slide-text {
+  color: #f5f7fa;
+  margin-bottom: 0;
+  line-height: 32px;
+  position: absolute;
+  bottom: 24px;
+  left: 24px;
+  right: 24px;
+}
+
+.gallery-slider-left {
+  width: 40px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  left: -50px;
+}
+
+.gallery-slider-left:focus-visible {
+  outline-offset: 0px;
+  border-radius: 5px;
+  outline: 2px solid #0050bd;
+}
+
+.gallery-slider-left[data-wf-focus-visible] {
+  outline-offset: 0px;
+  border-radius: 5px;
+  outline: 2px solid #0050bd;
+}
+
+.slider-arrow-embed {
+  color: #11151d;
+}
+
+.gallery-slider-right {
+  width: 40px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  right: -50px;
+}
+
+.gallery-slider-right:focus-visible {
+  outline-offset: 0px;
+  border-radius: 5px;
+  outline: 2px solid #0050bd;
+}
+
+.gallery-slider-right[data-wf-focus-visible] {
+  outline-offset: 0px;
+  border-radius: 5px;
+  outline: 2px solid #0050bd;
+}
+
+.gallery-slide-nav {
+  display: none;
+}
+
+.flex-block-25 {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-15 {
+  max-width: 1236px;
+}
+
+.div-block-11-copy {
+  padding-bottom: 47px;
+}
+
+.button-primary-copy-under-construction {
+  color: #86888b;
+  letter-spacing: 2px;
+  text-transform: none;
+  background-color: rgba(43, 47, 53, 0);
+  border: 3px solid #86888b;
+  border-radius: 9.6px;
+  margin-top: 15.46px;
+  margin-bottom: 15.46px;
+  padding: 12px 25px;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 20px;
+  transition: all .2s;
+}
+
+.button-primary-copy-under-construction:hover {
+  color: #86888b;
+  background-color: rgba(69, 143, 171, 0);
+}
+
+.button-primary-copy-under-construction:active {
+  color: #86888b;
+  background-color: rgba(97, 209, 250, 0);
+}
+
+.button-primary-copy-under-construction-copy {
+  color: #2b2f35;
+  letter-spacing: 2px;
+  text-transform: none;
+  background-color: rgba(43, 47, 53, 0);
+  border: 3px solid #2b2f35;
+  border-radius: 9.6px;
+  margin-top: 15.46px;
+  margin-bottom: 15.46px;
+  padding: 12px 25px;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 20px;
+  transition: all .2s;
+}
+
+.button-primary-copy-under-construction-copy:hover {
+  color: #2b2f35;
+  background-color: rgba(69, 143, 171, 0);
+}
+
+.button-primary-copy-under-construction-copy:active {
+  color: #2b2f35;
+  background-color: rgba(97, 209, 250, 0);
 }
 
 @media screen and (max-width: 991px) {
@@ -2226,6 +2603,55 @@ a {
     margin-right: 55px;
     line-height: 72px;
   }
+
+  .fn-banner-image-three, .fn-banner-image-two, .fn-banner-image-one {
+    display: none;
+  }
+
+  .fn-button-dark:hover {
+    color: #df0;
+    background-color: #1d1f1e;
+  }
+
+  .fn-heading-2 {
+    margin-bottom: 12px;
+    font-size: 40px;
+  }
+
+  .fn-cta-banner-column {
+    width: 100%;
+    max-width: none;
+  }
+
+  .fn-cta-banner {
+    padding: 60px;
+  }
+
+  .fn-section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  .container-14 {
+    max-width: 728px;
+  }
+
+  .gallery-wrapper {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .gallery-slider-left {
+    left: -20px;
+  }
+
+  .gallery-slider-right {
+    right: -20px;
+  }
+
+  .container-15 {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -2438,6 +2864,45 @@ a {
 
   .text-block-17-copy {
     line-height: 80px;
+  }
+
+  .fn-button-dark {
+    width: 100%;
+  }
+
+  .fn-heading-2 {
+    font-size: 34px;
+  }
+
+  .fn-cta-banner {
+    padding: 12px;
+  }
+
+  .fn-section {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    overflow: visible;
+  }
+
+  .gallery-slider {
+    padding: 60px 15px;
+  }
+
+  .gallery-slide {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .gallery-slide-text {
+    line-height: 30px;
+  }
+
+  .gallery-slider-left {
+    left: -20px;
+  }
+
+  .gallery-slider-right {
+    right: -20px;
   }
 }
 
@@ -2761,6 +3226,37 @@ a {
     margin-left: 6px;
     margin-right: 6px;
   }
+
+  .centered-heading-copy-copy {
+    margin-bottom: 24px;
+  }
+
+  .container-14 {
+    max-width: none;
+  }
+
+  .gallery-wrapper {
+    grid-template-columns: 1fr;
+  }
+
+  .gallery-slide-wrapper {
+    max-width: 100%;
+    margin-right: 0%;
+  }
+
+  .gallery-slider-left {
+    left: -20px;
+  }
+
+  .gallery-slider-right {
+    right: -20px;
+  }
+
+  .button-primary-copy-under-construction, .button-primary-copy-under-construction-copy {
+    margin-bottom: 7.46px;
+    margin-left: 6px;
+    margin-right: 6px;
+  }
 }
 
 #w-node-_94b3c992-6e84-9ddb-59fb-4a4d840429d2-efa77703, #w-node-_94b3c992-6e84-9ddb-59fb-4a4d840429dc-efa77703, #w-node-_94b3c992-6e84-9ddb-59fb-4a4d840429e6-efa77703, #w-node-_64ee8472-d36f-cdd2-0ed6-b51224e73e29-efa77703, #w-node-_64ee8472-d36f-cdd2-0ed6-b51224e73e20-efa77703, #w-node-_64ee8472-d36f-cdd2-0ed6-b51224e73e34-efa77703 {
@@ -2827,9 +3323,32 @@ a {
   grid-area: span 2 / span 1 / span 2 / span 1;
 }
 
+#w-node-ad3f57aa-92c6-7d16-2d9a-4eac4abc1b36-2c642647 {
+  grid-area: span 1 / span 1 / span 1 / span 1;
+  align-self: auto;
+}
+
+#w-node-ad3f57aa-92c6-7d16-2d9a-4eac4abc1b3b-2c642647 {
+  grid-area: span 1 / span 2 / span 1 / span 2;
+}
+
+#w-node-ad3f57aa-92c6-7d16-2d9a-4eac4abc1b49-2c642647, #w-node-ad3f57aa-92c6-7d16-2d9a-4eac4abc1b4e-2c642647, #w-node-_3651c072-cc9d-0d4f-5506-dd9772ee5754-2c642647, #w-node-_003482cb-8fb4-c479-9e0a-dea6cfa5fa2f-2c642647, #w-node-_003482cb-8fb4-c479-9e0a-dea6cfa5fa36-2c642647, #w-node-_003482cb-8fb4-c479-9e0a-dea6cfa5fa3f-2c642647 {
+  grid-area: span 1 / span 1 / span 1 / span 1;
+}
+
 @media screen and (max-width: 991px) {
   #w-node-_766cd561-15ea-ae5f-e395-5cc50c8b70e6-fa530bc7, #w-node-_4e496d86-be31-43b8-ecb6-4ef8b9df5be2-fa530bc7, #w-node-_1a74592e-493c-2de0-c9e8-be4eb54acb83-fa530bc7, #w-node-_2e03cd88-a060-9251-954a-599db6a1bc5b-fa530bc7, #w-node-_138b2c9e-6760-4180-d3ec-817fc79eb5bc-fa530bc7, #w-node-b1529b9c-f496-3f89-b645-470609e1203a-fa530bc7, #w-node-d007db75-50f1-8059-e8ae-fadd85441f45-fa530bc7, #w-node-_4d1acbe6-a45a-e2c2-8ea3-707579b28376-fa530bc7, #w-node-_2e09f7f0-c625-af5a-478d-c0432486fe2b-fa530bc7 {
     justify-self: center;
+  }
+
+  #w-node-ad3f57aa-92c6-7d16-2d9a-4eac4abc1b36-2c642647 {
+    grid-area: span 1 / span 2 / span 1 / span 2;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  #w-node-ad3f57aa-92c6-7d16-2d9a-4eac4abc1b36-2c642647, #w-node-ad3f57aa-92c6-7d16-2d9a-4eac4abc1b3b-2c642647 {
+    grid-area: span 1 / span 1 / span 1 / span 1;
   }
 }
 
